<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.i-novus.messaging</groupId>
    <artifactId>messaging-pom</artifactId>
    <packaging>pom</packaging>
    <version>6.0.2-SNAPSHOT</version>

    <parent>
        <groupId>net.n2oapp.platform</groupId>
        <artifactId>n2o-boot-platform-parent</artifactId>
        <version>7.0.1</version>
        <relativePath />
    </parent>

    <properties>
        <java.version>21</java.version>
        <n2o.version>7.29.5</n2o.version>
        <access.version>9.0.2</access.version>
        <jacoco.skip>true</jacoco.skip>
        <lombok.version>1.18.38</lombok.version>
        <amazonaws.version>1.12.772</amazonaws.version>
        <feign.version>13.6</feign.version>
        <cxf.version>4.1.3</cxf.version>
    </properties>

    <name>Messaging</name>

    <url>https://messaging.i-novus.ru</url>

    <scm>
        <connection>scm:git:https://git.i-novus.ru/components/messaging.git</connection>
        <url>https://git.i-novus.ru/components/messaging</url>
        <developerConnection>scm:git:https://git.i-novus.ru/components/messaging.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>I-Novus LLC</name>
        <url>https://i-novus.ru/</url>
    </organization>

    <modules>
        <module>messaging-admin-frontend</module>
        <module>messaging-admin-web</module>
        <module>messaging-api</module>
        <module>messaging-impl</module>
        <module>messaging-support-kafka</module>
        <module>messaging-web</module>
        <module>messaging-backend</module>
        <module>messaging-channel-api</module>
        <module>messaging-channel-email</module>
        <module>messaging-channel-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-admin-rest-api</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-admin-api</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-auth</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-admin-rest-client</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>net.n2oapp.framework.security</groupId>
                <artifactId>security-auth-common</artifactId>
                <version>${access.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-channel-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-impl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-support-kafka</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-admin-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.i-novus.messaging</groupId>
                <artifactId>messaging-web</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>process-docker-config</id>
                        <phase>initialize</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>release</name>
                </property>
            </activation>
            <distributionManagement>
                <repository>
                    <id>central</id>
                </repository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <signer>bc</signer>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.7.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
